# cassetti

./: README.md  ROADMAP.md  TODO.org  Untitled.ipynb
CassetteBackups/: Cargo.toml
CassetteBackups/Cassette/: Cargo.toml  in_test.org
CassetteBackups/Cassette/src/: audio.rs  linear.rs  main.rs
CassetteBackups/ChannelSimulator/: Cargo.toml  in_test_10001_bytes.org  out_test.org
CassetteBackups/ChannelSimulator/src/: \  cassette_simulator.rs  channel_simulation.rs  gui.rs  main.rs
CassetteBackups/Dsp/: Cargo.toml
CassetteBackups/Dsp/src/: lib.rs
CassetteBackups/Dsp/src/Signal/: mod.rs  signal_slice.rs  signal_vec.rs
CassetteBackups/Dsp/src/SignalDynamic/: mod.rs
CassetteBackups/ErrorCorrection/: Cargo.toml
CassetteBackups/FileSystemManager/: in_test.org
CassetteBackups/FileSystemManager/src/: lib.rs
CassetteBackups/SignalCodification/: Cargo.toml
CassetteBackups/SignalCodification/Modulations/BPSK/: Cargo.toml
CassetteBackups/SignalCodification/Modulations/BPSK/src/: lib.rs
CassetteBackups/SignalCodification/Modulations/ModulationsManager/: Cargo.toml
CassetteBackups/SignalCodification/Modulations/ModulationsManager/src/: lib.rs  traits.rs
CassetteBackups/SignalCodification/src/: lib.rs  traits.rs
CassetteBackups/SignalCodificationDynamic/: Cargo.toml
CassetteBackups/SignalCodificationDynamic/Modulations/BPSKDynamic/: Cargo.toml
CassetteBackups/SignalCodificationDynamic/Modulations/MQAMDynamic/: Cargo.toml  File test outut.org  mqam.org
CassetteBackups/SignalCodificationDynamic/Modulations/ModulationsManagerDynamic/: Cargo.toml
CassetteBackups/SignalCodificationDynamic/src/: lib.rs  traits.rs
(+32 files in other folders)
