[workspace]

members = [
 "Cassette",
 "ChannelSimulator",
 "Dsp",
 "ErrorCorrection",
 "FileSystemManager",

 "SignalCodification",
 "SignalCodification/Modulations/BPSK",
 "SignalCodification/Modulations/ModulationsManager",

 "SignalCodificationDynamic",
 "SignalCodificationDynamic/Modulations/ModulationsManagerDynamic",
 "SignalCodificationDynamic/Modulations/BPSKDynamic",
 "SignalCodificationDynamic/Modulations/MQAMDynamic",
]
